# Poke_game

./: .gitignore  CMakeLists.txt
CMakeSettings.json/: CMakeSettings.json
api_bridge/: api_bridge.py  requirements.txt
api_bridge/etl/: fetch_pokeapi.py
backend_c/: main.c
backend_c/include/: battle.h  dao_player.h  dao_pokemon.h  db.h  player.h  playerPokemon.h  playerQueue.h  pokemon.h  shop.h
backend_c/src/: battle.c  dao_player.c  dao_pokemon.c  db.c  player.c  playerQueue.c  shop.c
backend_py/: main.py  test.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: battle.js  main.js  player.js  shop.js
include/: db.h
test/: test_dao.c
